--- a/drupal-8/src/ciam_loginradius/lr_ciam/theme/change_password.html.twig
+++ b/drupal-8/src/ciam_loginradius/lr_ciam/theme/change_password.html.twig
@@ -1,8 +1,3 @@
-  <script>
-    jQuery(document).ready(function () {
-      initializeChangePasswordCiamForms();
-    });
-  </script>
   <div class="messages" style="display:none">
     <h2 class="element-invisible">Error message</h2>
     <ul>
@@ -14,4 +9,5 @@
   </div>
   <div class="my-form-wrapper">
     <div id="changepassword-container"></div> 
+    {% include 'lr_loading.html.twig' %} 
   </div>
