--- a/drupal-8/src/ciam_loginradius/lr_ciam/theme/user_login_form.html.twig
+++ b/drupal-8/src/ciam_loginradius/lr_ciam/theme/user_login_form.html.twig
@@ -1,26 +1,10 @@
+{{ attach_library('lr_ciam/drupal.user_login') }}
 {% if api_key   %}
 
 
 {% include 'lr_message.html.twig' %}
  
- 
-  <script>
-    jQuery(document).ready(function () {
-      initializeLoginCiamForm();
-      initializeSocialRegisterCiamForm();
-        var isClear = 1;
-          var formIntval;
-        setTimeout(show_birthdate_date_block, 1000);
-          formIntval = setInterval(function(){ jQuery('#lr-loading').hide();
-             if (isClear > 0) {
-                 clearInterval(formIntval);
-             }
-         }, 1000);
-    });
-  </script>
-
   <label id="interfaceLabel">{{ interface_label }}</label>
-
   <div>
   {% include 'ciam_social_widget_container.html.twig' %}
     
