--- a/drupal-8/src/ciam_loginradius/lr_ciam/theme/ciam_social_widget_container.html.twig
+++ b/drupal-8/src/ciam_loginradius/lr_ciam/theme/ciam_social_widget_container.html.twig
@@ -14,6 +14,4 @@
 </script>
 <div class="lr_singleglider_200 interfacecontainerdiv"></div>
 <div style="clear:both"></div>
-<script>
-  callSocialInterface();
-</script>
+{{ attach_library('lr_ciam/drupal.social_interface') }}
