--- a/drupal-8/src/ciam_loginradius/lr_ciam/theme/user_register_form.html.twig
+++ b/drupal-8/src/ciam_loginradius/lr_ciam/theme/user_register_form.html.twig
@@ -1,20 +1,7 @@
+{{ attach_library('lr_ciam/drupal.user_register') }}
 {% if admin_access %}
 {% if api_key   %}
 {% include 'lr_message.html.twig' %}
-    <script>
-      jQuery(document).ready(function () {
-       initializeRegisterCiamForm();
-        initializeSocialRegisterCiamForm();
-          var isClear = 1;
-          var formIntval;
-        setTimeout(show_birthdate_date_block, 1000);
-          formIntval = setInterval(function(){ jQuery('#lr-loading').hide();
-             if (isClear > 0) {
-                 clearInterval(formIntval);
-             }
-         }, 1000);
-      });
-    </script>
     
   <label>{{ interface_label }}</label>
      {% include 'ciam_social_widget_container.html.twig' %}
