--- a/drupal-8/src/customer_identity_and_access_management/lr_ciam/theme/user_pass_form.html.twig
+++ b/drupal-8/src/customer_identity_and_access_management/lr_ciam/theme/user_pass_form.html.twig
@@ -1,20 +1,17 @@
 
+{% if showpassonlogin   %}
 {% if api_key   %}
 
 {% include 'lr_message.html.twig' %}
  
   <div class="ciam-lr-form my-form-wrapper">
     <div id="forgotpassword-container"></div>
-        {% if link_login   %}
-            <a href="{{ link_login }}">Login</a>&nbsp;&nbsp;
-        {% endif %}
-        {% if link_register   %}
-            <a href="{{ link_register }}">Create new account</a>
-        {% endif %}
      {% include 'lr_loading.html.twig' %} 
   </div>
 {% endif %}
+{% else %}
   {{ attach_library('lr_ciam/drupal.user_pass') }}
-
+{{ rendered }}
+{% endif %}
 
 
