--- a/drupal-8/src/customer_identity_and_access_management/lr_ciam/theme/user_pass.html.twig
+++ b/drupal-8/src/customer_identity_and_access_management/lr_ciam/theme/user_pass.html.twig
@@ -1,5 +1,5 @@
 
-{% if api_key   %}
+{% if showpassonlogin   %}
 
 {% include 'lr_message.html.twig' %}
  
@@ -15,6 +15,3 @@
   </div>
 {% endif %}
   {{ attach_library('lr_ciam/drupal.user_pass') }}
-
-
-
