--- a/drupal-8/src/customer_identity_and_access_management/lr_ciam/theme/lr_loading.html.twig
+++ b/drupal-8/src/customer_identity_and_access_management/lr_ciam/theme/lr_loading.html.twig
@@ -2,12 +2,12 @@
 <div class="overlay" id="lr-loading" style="display: none;">
   <div class="lr_loading_screen">
       <div class="lr_loading_screen_center" style="position: fixed;">
-          <img src="{{ lr_loading_image }}" class="lr_loading_screen_spinner">
+          <div class="lr_loading_screen_spinner"></div> 
           <div class="lr_loading-phrases-container">
               <div class="lr_loading-phrases_wrap">
                   <div class="lr_loading_phrase" style="color: #646F79">Please wait...</div>                      
               </div>              
-          </div>                  
+          </div>                                   
       </div>     
   </div>
 </div>
