--- a/drupal-8/src/customer_identity_and_access_management/lr_ciam/theme/lr_loading.html.twig
+++ b/drupal-8/src/customer_identity_and_access_management/lr_ciam/theme/lr_loading.html.twig
@@ -5,7 +5,7 @@
           <div class="lr_loading_screen_spinner"></div> 
           <div class="lr_loading-phrases-container">
               <div class="lr_loading-phrases_wrap">
-                  <div class="lr_loading_phrase" style="color: #646F79">Please wait...</div>                      
+                  <div class="lr_loading_phrase" style="color: #fff">Please wait...</div>                      
               </div>              
           </div>                                   
       </div>     
