--- a/drupal-8/src/customer_identity_and_access_management/lr_ciam/css/ciam.css
+++ b/drupal-8/src/customer_identity_and_access_management/lr_ciam/css/ciam.css
@@ -1,29 +1,36 @@
-.lr-linked-data div > img {
+.lr-linked-data div>img {
   vertical-align: middle;
 }
-input#loginradius-linksignin-email-me-a-link-to-sign-in:hover, 
+
+input#loginradius-linksignin-email-me-a-link-to-sign-in:hover,
 input#loginradius-linksignin-email-me-a-link-to-sign-in:active,
 input#loginradius-linksignin-email-me-a-link-to-sign-in:focus {
-border-bottom-style: outset;
+  border-bottom-style: outset;
 }
-input#loginradius-linksignin-email-me-a-link-to-sign-in{
-    height: 31px;
-    color: #3b3b3b;
+
+input#loginradius-linksignin-email-me-a-link-to-sign-in {
+  height: 31px;
+  color: #3b3b3b;
 }
-#edit-phoneid{
-    background:#ededed;
+
+#edit-phoneid {
+  background: #ededed;
 }
+
 .showmsg {
-    margin: -177px -36px 16px -330px !important;
+  margin: -177px -36px 16px -330px !important;
 }
-.ui-datepicker{
-    z-index: 9999999 !important;
+
+.ui-datepicker {
+  z-index: 9999999 !important;
 }
-#edit-thanks-block{
-    background-color: #dfebf5;
+
+#edit-thanks-block {
+  background-color: #dfebf5;
 }
-#edit-phone-warning-block{    
-    background-color: rgb(255, 255, 224);
+
+#edit-phone-warning-block {
+  background-color: rgb(255, 255, 224);
 }
 
 ul.loginradiuscustomsso-idlinks {
@@ -94,6 +101,7 @@ div.loginradius-ciam-validation-message {
     -ms-box-shadow: inset 0 0 5px #c0dbf2;
     box-shadow: inset 0 0 5px #c0dbf2;
   }
+
   100% {
     -webkit-box-shadow: inset 0 0 20px #c0dbf2;
     -moz-box-shadow: inset 0 0 20px #c0dbf2;
@@ -109,6 +117,7 @@ div.loginradius-ciam-validation-message {
     -ms-box-shadow: inset 0 0 5px #c0dbf2;
     box-shadow: inset 0 0 5px #c0dbf2;
   }
+
   100% {
     -webkit-box-shadow: inset 0 0 20px #c0dbf2;
     -moz-box-shadow: inset 0 0 20px #c0dbf2;
@@ -124,6 +133,7 @@ div.loginradius-ciam-validation-message {
     -ms-box-shadow: inset 0 0 5px #c0dbf2;
     box-shadow: inset 0 0 5px #c0dbf2;
   }
+
   100% {
     -webkit-box-shadow: inset 0 0 20px #c0dbf2;
     -moz-box-shadow: inset 0 0 20px #c0dbf2;
@@ -139,6 +149,7 @@ div.loginradius-ciam-validation-message {
     -ms-box-shadow: inset 0 0 5px #c0dbf2;
     box-shadow: inset 0 0 5px #c0dbf2;
   }
+
   100% {
     -webkit-box-shadow: inset 0 0 20px #c0dbf2;
     -moz-box-shadow: inset 0 0 20px #c0dbf2;
@@ -151,7 +162,7 @@ div.loginradius-ciam-validation-message {
   background: 0 0;
 }
 
-.lr_singleglider_200 > h3 {
+.lr_singleglider_200>h3 {
   color: #666;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 12px;
@@ -192,11 +203,13 @@ div.loginradius-ciam-validation-message {
   height: 38px;
   background-position: 0 -912px;
 }
+
 .lr_singleglider_200 .lr_pinterest {
   width: 38px;
   height: 38px;
   background-position: 0 74px;
 }
+
 .lr_singleglider_200 .lr_line {
   width: 38px;
   height: 38px;
@@ -446,105 +459,114 @@ div.loginradius-ciam-validation-message {
 .lr-linked-data.lr_singleglider_200 span.lr_providericons {
   margin: 0 6px 2px;
 }
+
 .mymsg {
   display: none;
 }
 
 .loginradius-validation-message {
-    color:red;
+  color: red;
 }
+
 .socialRegistration {
-    background: no-repeat rgba(127, 127, 127, .6);
-    top: 0;
-    left: 0;
-    z-index: 100001;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    overflow: auto;
+  background: no-repeat rgba(127, 127, 127, .6);
+  top: 0;
+  left: 0;
+  z-index: 100001;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  overflow: auto;
 }
+
 .socialRegistration form[name=loginradius-socialRegistration] {
-    background: #fff;
-    width: 400px;
-    padding: 30px;
-    border: 1px solid #ddd;
-    border-radius: 0 11px !important;
-    margin: 10% auto;
+  background: #fff;
+  width: 400px;
+  padding: 30px;
+  border: 1px solid #ddd;
+  border-radius: 0 11px !important;
+  margin: 10% auto;
 }
+
 #showRemovePopup {
-    display:none;
+  display: none;
 }
 
 .LoginRadius_overlay {
-    background: #7f7f7f;
-    background: no-repeat rgba(127, 127, 127, .6);
-    top: 0;
-    left: 0;
-    z-index: 100001;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    padding: 0;
-    position: fixed;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
-    filter: alpha(opacity=90)
+  background: #7f7f7f;
+  background: no-repeat rgba(127, 127, 127, .6);
+  top: 0;
+  left: 0;
+  z-index: 100001;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  padding: 0;
+  position: fixed;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
+  filter: alpha(opacity=90);
 }
 
 #addemail-form .lr-popupheading,
 #removeemail-form .lr-popupheading {
-    background: #efefef;
-    font-size: 17px;
-    font-weight: 400;
-    line-height: 20px;
-    padding: 15px;
-    border-radius: 0 20px 0 0
+  background: #efefef;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 20px;
+  padding: 15px;
+  border-radius: 0 20px 0 0;
 }
-.closeRemove {   
-    text-align: right;
-    cursor:pointer;
-    margin-top:-22px;
+
+.closeRemove {
+  text-align: right;
+  cursor: pointer;
+  margin-top: -22px;
 }
-.removeEmail {   
-    cursor:pointer;
-    border-radius: 5px;
-    width: 70px;
-    text-align: center;
-    background-color: darkgray;
+
+.removeEmail {
+  cursor: pointer;
+  border-radius: 5px;
+  width: 70px;
+  text-align: center;
+  background-color: darkgray;
 }
-.addEmail {     
-    cursor:pointer;
-    border-radius: 5px;
-    width: 70px;
-    text-align: center;
-    background-color: darkgray;
+
+.addEmail {
+  cursor: pointer;
+  border-radius: 5px;
+  width: 70px;
+  text-align: center;
+  background-color: darkgray;
 }
+
 #addemail-form .popupmain,
 #removeemail-form .popupmain {
-    background: #fff;
-    width: 506px;
-    left: 50%;
-    top: 45%;
-    margin-left: -250px;
-    margin-top: -250px;
-    position: absolute;
-    z-index: 999999;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 13px;
-    border-radius: 0 23px
+  background: #fff;
+  width: 506px;
+  left: 50%;
+  top: 45%;
+  margin-left: -250px;
+  margin-top: -250px;
+  position: absolute;
+  z-index: 999999;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  border-radius: 0 23px;
 }
 
 #addemail-form .lr-popup-footer,
 #removeemail-form .lr-popup-footer {
-    background: #efefef;
-    border-radius: 0 0 0 20px;
-    color: #000;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
-    font-weight: 400;
-    height: 45px;
-    padding: 7px 10px 0;
-    text-align: left
+  background: #efefef;
+  border-radius: 0 0 0 20px;
+  color: #000;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  height: 45px;
+  padding: 7px 10px 0;
+  text-align: left;
 }
+
 #addemail-container input[type=text],
 #removeemail-container input[type=text] {
   font-family: Arial, Helvetica, sans-serif;
@@ -556,99 +578,118 @@ div.loginradius-ciam-validation-message {
   padding-left: 10px;
   border-radius: 0 12px;
   background: #fff;
-  margin-left:80px;
+  margin-left: 80px;
 }
+
 #addemail-container label,
-#removeemail-container label{  
-  margin-top:5px;  
-  margin-left:80px;
+#removeemail-container label {
+  margin-top: 5px;
+  margin-left: 80px;
 }
+
 #addemail-container input[type=submit],
 #removeemail-container input[type=submit] {
-  margin-left:62%;
+  margin-left: 62%;
 }
+
 #authentication-container input[type=button],
-#authentication-container input[type=submit]{
-    background-color: darkseagreen;
+#authentication-container input[type=submit] {
+  background-color: darkseagreen;
 }
-.loginradius-linksignin{
-    margin-left: 2px;
+
+.loginradius-linksignin {
+  margin-left: 2px;
 }
 
 #edit-reset .resetCode:hover {
-    background: #fff;
-    color: #29d;
-    border:1px solid #29d;
-    cursor: pointer;
+  background: #fff;
+  color: #29d;
+  border: 1px solid #29d;
+  cursor: pointer;
 }
+
 #edit-reset .resetCode {
-    background: #29d;
-    float: right;
-    color: #fff;
-    padding: 6px 10px;
+  background: #29d;
+  float: right;
+  color: #fff;
+  padding: 6px 10px;
 }
+
 .resetCode {
-      margin-right: 5px;
+  margin-right: 5px;
 }
+
 #lr_ciam_reset_table {
-    clear: both;
-    margin-top: 45px;
+  clear: both;
+  margin-top: 45px;
 }
+
 div#backupcode-table-body {
-    display: inline-block;
+  display: inline-block;
 }
+
 #backupcode-table-body .form-item {
-    float: left;
-    margin-top: -8px !important;
-    width: 48%;
-    background: #eee;
-    border: 2px solid #fff;
-    padding: 5px;
+  float: left;
+  margin-top: -8px !important;
+  width: 48%;
+  background: #eee;
+  border: 2px solid #fff;
+  padding: 5px;
 }
+
 #resettable p {
-    border: 1px solid red;
-    padding: 5px;
-    border-radius: 5px;
-    background: hsla(0, 100%, 50%, 0.18);
+  border: 1px solid red;
+  padding: 5px;
+  border-radius: 5px;
+  background: hsla(0, 100%, 50%, 0.18);
 }
+
 #resettable {
-    margin-right: 100px;
+  margin-right: 100px;
 }
+
 .mybackupcopy {
-    width: 32px;
-    float: right;
-    background-image: url(../images/copy.png);
-    height: 40px;
-    background-size: 24px 24px;
-    background-repeat: no-repeat;
-    margin: 5px;
-    cursor: pointer;
+  width: 32px;
+  float: right;
+  background-image: url(../images/copy.png);
+  height: 40px;
+  background-size: 24px 24px;
+  background-repeat: no-repeat;
+  margin: 5px;
+  cursor: pointer;
 }
-.copyMessage{
-    background-color: #eeeeee;
-    display: inline-block;
-    padding: 6px 12px 5px 10px;
-    color:#59b32c; 
-    margin-left:86%;
-    margin-bottom: -21px;   
+
+.copyMessage {
+  background-color: #eeeeee;
+  display: inline-block;
+  padding: 6px 12px 5px 10px;
+  color: #59b32c;
+  margin-left: 86%;
+  margin-bottom: -21px;
 }
-#login-container .linksignin-loginradius-Send{
-    padding:4px;
+
+#login-container .linksignin-loginradius-Send {
+  padding: 4px;
 }
-.content-loginradius-stayLogin label{
-    margin-top: -22px;
-    margin-left: 20px;
+
+.content-loginradius-stayLogin label {
+  margin-top: -22px;
+  margin-left: 20px;
 }
+
 .loginType {
- font-weight: bold;
+  font-weight: bold;
 }
+
 .loginTypeTooltip {
- text-decoration:none !important; 
- cursor:pointer !important;
+  text-decoration: none !important;
+  cursor: pointer !important;
 }
-.logintypeColor{
-    color:#3CF;
+
+.logintypeColor {
+  color: #3cf;
 }
+
 div.form-item-ciam-welcome-email-template label,
 div.form-item-ciam-email-verification-template label,
 div.form-item-ciam-reset-password-email-template label,
@@ -658,10 +699,9 @@ div.form-item-ciam-sms-template-phone-verification label,
 div.form-item-ciam-sms-template-one-time-passcode label,
 div.form-item-ciam-sms-template-reset-password label,
 div.form-item-ciam-sms-template-change-phone-no label,
-div.form-item-ciam-sms-template-2fa label
-{
-        margin-top: 18px;
-        margin-bottom: -18px;
+div.form-item-ciam-sms-template-2fa label {
+  margin-top: 18px;
+  margin-bottom: -18px;
 }
 
 #edit-ciam-welcome-email-template,
@@ -673,9 +713,8 @@ div.form-item-ciam-sms-template-2fa label
 #edit-ciam-sms-template-reset-password,
 #edit-ciam-sms-template-change-phone-no,
 #edit-ciam-sms-template-one-time-passcode,
-#edit-ciam-sms-template-2fa
-{
-    margin: 0px 0px 0px 440px;
-    clear: both;
-    width:150px;
+#edit-ciam-sms-template-2fa {
+  margin: 0px 0px 0px 440px;
+  clear: both;
+  width: 150px;
 }
