--- a/drupal-8/src/customer_identity_and_access_management/lr_ciam/css/lr_loading.css
+++ b/drupal-8/src/customer_identity_and_access_management/lr_ciam/css/lr_loading.css
@@ -10,7 +10,8 @@
   width: 100%;
   top: 0;
   z-index: 99999;
-  background: rgb(127, 127, 127); /* The Fallback */
+  background: rgb(127, 127, 127);
+  /* The Fallback */
   background: none no-repeat scroll 0 0 rgba(127, 127, 127, 0.6);
 }
 
@@ -19,46 +20,79 @@
   display: inline-block;
   height: 100%;
   vertical-align: middle;
-  margin-right: -0.25em; /* Adjusts for spacing */
+  margin-right: -0.25em;
+  /* Adjusts for spacing */
 }
 
 .lr_loading_screen {
-    background: rgba(0,0,0,.5);
-    height: 100vh;
-    position: relative;
-    z-index: 10000;
+  background: rgba(0, 0, 0, .5);
+  height: 100vh;
+  position: relative;
+  z-index: 10000;
 }
 
 .lr_loading_screen_center {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    width: 500px;
-    margin-left: -250px;
-    margin-top: -26px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 500px;
+  margin-left: -250px;
+  margin-top: -26px;
 }
+
 .lr_loading_screen_spinner {
-    height: 52px;
-    width: 52px;
-    margin: 0 auto;
-    display: block;
-    background-image: url(../images/loading.png);
-    animation: lr_loading_screen_animation_spinning .8s linear infinite;
-    background-size: 52px 52px;
-    background-repeat: no-repeat;
+  height: 52px;
+  width: 52px;
+  margin: 0 auto;
+  display: block;
+  background-image: url(../images/loading.png);
+  animation: lr_loading_screen_animation_spinning .8s linear infinite;
+  background-size: 52px 52px;
+  background-repeat: no-repeat;
 }
-.lr_loading_phrase, .lr_loading_screen_spinner {
-    backface-visibility: hidden;
-    perspective: 1000;
-}
-@-moz-keyframes lr_loading_screen_animation_spinning
-{0%{transform:rotate(0)}100%{transform:rotate(360deg)}
-}
-@-webkit-keyframes lr_loading_screen_animation_spinning
-{0%{transform:rotate(0)}100%{transform:rotate(360deg)}}
 
-@-o-keyframes lr_loading_screen_animation_spinning
-{0%{transform:rotate(0)}100%{transform:rotate(360deg)}}
+.lr_loading_phrase,
+.lr_loading_screen_spinner {
+  backface-visibility: hidden;
+  perspective: 1000;
+}
 
-@keyframes lr_loading_screen_animation_spinning
-{0%{transform:rotate(0)}100%{transform:rotate(360deg)}}
+@-moz-keyframes lr_loading_screen_animation_spinning {
+  0% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes lr_loading_screen_animation_spinning {
+  0% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@-o-keyframes lr_loading_screen_animation_spinning {
+  0% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes lr_loading_screen_animation_spinning {
+  0% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
